tests/baselines/reference/callbackArgsDifferByOptionality.errors.txt
callbackArgsDifferByOptionality.ts(4,5): error TS2304: Cannot find name 'cb'.


==== callbackArgsDifferByOptionality.ts (1 errors) ====
    function x3(callback: (x?: 'hi') => number);
    function x3(callback: (x: string) => number);
    function x3(callback: (x: any) => number) {
        cb();
        ~~
!!! error TS2304: Cannot find name 'cb'.
    }